newTest_1107086_out.txt
------------Cluster Job Start-----------------------
srun: defined options
srun: -------------------- --------------------
srun: (null)              : cp2019-12
srun: cpus-per-task       : 2
srun: jobid               : 1107086
srun: job-name            : TestRun
srun: mem                 : 16G
srun: nodes               : 1
srun: verbose             : 1
srun: -------------------- --------------------
srun: end of defined options
srun: jobid 1107086: nodes(1):`cp2019-12', cpu counts: 2(x1)
srun: launch/slurm: launch_p_step_launch: CpuBindType=(null type)
srun: launching StepId=1107086.0 on host cp2019-12, 1 tasks: 0
srun: route/default: init: route default plugin loaded
srun: launch/slurm: _task_start: Node cp2019-12, 1 tasks started
Traceback (most recent call last):
  File "/home/schlecht/tmp/Anaconda/home/schlecht/AnacondaNeu/lib/python3.10/runpy.py", line 196, in _run_module_as_main
    return _run_code(code, main_globals, None,
  File "/home/schlecht/tmp/Anaconda/home/schlecht/AnacondaNeu/lib/python3.10/runpy.py", line 86, in _run_code
    exec(code, run_globals)
  File "/home/schlecht/nobackup/MinigridCurriculumLearning/scripts/trainCurriculum.py", line 8, in <module>
    import utils
  File "/home/schlecht/nobackup/MinigridCurriculumLearning/utils/__init__.py", line 6, in <module>
    from .storage import *
  File "/home/schlecht/nobackup/MinigridCurriculumLearning/utils/storage.py", line 9, in <module>
    from .curriculumHelper import GEN_PREFIX
  File "/home/schlecht/nobackup/MinigridCurriculumLearning/utils/curriculumHelper.py", line 114
    register(
    ^
IndentationError: expected an indented block after 'if' statement on line 113
pygame 2.4.0 (SDL 2.26.4, Python 3.10.9)
Hello from the pygame community. https://www.pygame.org/contribute.html
srun: launch/slurm: _task_finish: Received task exit notification for 1 task of StepId=1107086.0 (status=0x0100).
srun: error: cp2019-12: task 0: Exited with exit code 1
---------- Cluster Job End ---------------------
